# 2020-munihac-opaleye-workshop

./: Connectivity.hs  LICENSE  Main.hs  README.md  foo.hs  opaleye-dvdrental.cabal
Examples/: GroupBy.hs  OrderBy.hs  Select.hs  Where.hs
OtherExamples/: Delete.hs  InnerJoin.hs  Insert.hs  LeftJoin.hs  Update.hs  View.hs
Types/: Actor.hs  Customer.hs  Film.hs  FilmActor.hs  Inventory.hs  Payment.hs
